sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var end:Boolean = true
  while (end) {
    end = false
    for (i <- 0 to getNombreValeurs() - 2) {
      if (getValeur(i) > getValeur(i+1)) {
        echange(i,i+1)
        end = true
      }
    }
    for (j <- getNombreValeurs() - 2 to 0 by -1) {
      if (getValeur(j) > getValeur(j+1)) {
        echange(i,i+1)
        end = true
      }
    }
  }
}
  